--- a/index.html
+++ b/index.html
@@ -4,74 +4,150 @@ index.html
 <head>
 <meta charset="UTF-8">
 <title>For Sachitha ❤️</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body {
-  background: linear-gradient(135deg, #ff5f9e, #ff9966);
-  height: 100vh;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Arial, sans-serif;
-  overflow: hidden;
+body{
+  margin:0;
+  height:100vh;
+  overflow:hidden;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:radial-gradient(circle at top,#ffb3c1,#ff4d6d);
+  font-family:'Segoe UI',sans-serif;
 }
-.card {
-  background: white;
-  padding: 25px;
-  border-radius: 20px;
-  text-align: center;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+
+.card{
+  background:white;
+  padding:35px;
+  width:380px;
+  text-align:center;
+  border-radius:25px;
+  box-shadow:0 20px 40px rgba(0,0,0,.35);
+  position:relative;
+  z-index:2;
 }
-h1 { color: #ff3366; }
-button {
-  padding: 12px 25px;
-  font-size: 18px;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  margin: 10px;
+
+h1{
+  color:#ff4d6d;
+  margin-bottom:10px;
 }
-#yes {
-  background: #ff3366;
-  color: white;
+
+#text{
+  font-size:17px;
+  min-height:60px;
 }
-#no {
-  background: #ccc;
-  position: absolute;
+
+.buttons{
+  margin-top:25px;
+  position:relative;
+  height:80px;
+}
+
+button{
+  padding:12px 26px;
+  font-size:16px;
+  border:none;
+  border-radius:25px;
+  cursor:pointer;
+  position:absolute;
+}
+
+#yes{
+  background:#ff4d6d;
+  color:white;
+  left:60px;
+}
+
+#no{
+  background:#eee;
+  right:60px;
+}
+
+/* Hearts */
+.heart{
+  position:absolute;
+  color:#ff4d6d;
+  font-size:18px;
+  animation:fall linear infinite;
+}
+
+@keyframes fall{
+  from{transform:translateY(-10px);}
+  to{transform:translateY(110vh);}
+}
+img{
+  width:240px;
+  border-radius:22px;
+  margin:15px auto;
+  display:block;
+  box-shadow:0 15px 30px rgba(0,0,0,.3);
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
-  <h1>Sachitha ❤️</h1>
-  <p>Will you be my Valentine? 💕</p>
-  <button id="yes" onclick="yesClick()">YES 😍</button>
-  <button id="no">NO 🙈</button>
-</div>
-
 <audio autoplay loop>
-  <source src="https://files.catbox.moe/5p5x0s.mp3" type="audio/mpeg">
+  <source src="enna_solla_pogirai.mp3" type="audio/mpeg">
 </audio>
 
+<div class="card" id="card">
+  <h1>Sachitha ❤️</h1>
+  <div id="text"></div>
+
+  <div class="buttons">
+    <button id="yes" onclick="yesClick()">Yes 💖</button>
+    <button id="no">No 🙈</button>
+  </div>
+</div>
+
 <script>
+/* Typewriter text */
+const message = "Every time I think of you, my heart forgets how to stay calm…";
+let i = 0;
+function typeText(){
+  if(i < message.length){
+    document.getElementById("text").innerHTML += message.charAt(i);
+    i++;
+    setTimeout(typeText, 50);
+  }
+}
+typeText();
+
+/* NO button escape */
 const noBtn = document.getElementById("no");
-noBtn.addEventListener("mouseover", moveButton);
-noBtn.addEventListener("touchstart", moveButton);
+noBtn.addEventListener("mouseenter", ()=>{
+  const x = Math.random()*250 - 125;
+  const y = Math.random()*180 - 90;
+  noBtn.style.transform = `translate(${x}px,${y}px)`;
+  document.body.style.transform = "translateX(3px)";
+  setTimeout(()=>document.body.style.transform="translateX(0)",50);
+});
 
-function moveButton() {
-  const x = Math.random() * (window.innerWidth - 100);
-  const y = Math.random() * (window.innerHeight - 50);
-  noBtn.style.left = x + "px";
-  noBtn.style.top = y + "px";
+/* YES click */
+function yesClick(){
+  document.getElementById("card").innerHTML = `
+    <img src="sachitha.jpg">
+    <h1>Sachitha 💕</h1>
+    <p>
+      You didn’t choose “Yes”…<br>
+      My heart already knew it ❤️<br><br>
+      🌹 Happy Valentine’s Day 🌹
+    </p>
+  `;
 }
 
-function yesClick() {
-  document.body.innerHTML =
-    "<h1 style='color:white;font-size:40px;text-align:center;'>Yay! ❤️🥰<br>Enna Solla Pogirai 🎶</h1>";
-}
+/* Heart rain */
+setInterval(()=>{
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerHTML = "❤️";
+  heart.style.left = Math.random()*100+"vw";
+  heart.style.animationDuration = (3+Math.random()*3)+"s";
+  document.body.appendChild(heart);
+  setTimeout(()=>heart.remove(),6000);
+},300);
 </script>
 
 </body>
