--- a/index.html
+++ b/index.html
@@ -3,74 +3,75 @@ index.html
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For Sachitha ❤️</title>
+<title>Sachitha ❤️</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
 <style>
-*{
-  box-sizing: border-box;
-}
 body{
   margin:0;
   height:100vh;
+  background: radial-gradient(circle at top,#1a1a2e,#0f0f1a);
   display:flex;
   justify-content:center;
   align-items:center;
-  background: linear-gradient(135deg,#ffafbd,#ffc3a0);
-  font-family:'Poppins',sans-serif;
+  font-family:'Montserrat',sans-serif;
   overflow:hidden;
+  color:white;
 }
 .card{
-  background: rgba(255,255,255,0.25);
-  backdrop-filter: blur(15px);
-  border-radius: 25px;
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(18px);
+  border-radius: 30px;
   padding: 30px;
-  width: 320px;
+  width: 330px;
   text-align: center;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.25);
-  animation: fadeUp 1.2s ease;
-}
-@keyframes fadeUp{
-  from{opacity:0; transform:translateY(30px);}
-  to{opacity:1; transform:translateY(0);}
+  box-shadow: 0 0 40px rgba(255,105,180,0.25);
+  z-index: 2;
 }
 img{
-  width: 180px;
-  border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(255,51,102,0.5);
+  width: 190px;
+  border-radius: 25px;
+  box-shadow: 0 0 35px rgba(255,105,180,0.6);
   margin-bottom: 15px;
 }
 h1{
-  font-family:'Playfair Display',serif;
-  color:#fff;
-  margin:10px 0;
+  font-family:'Dancing Script',cursive;
+  font-size: 42px;
+  margin: 10px 0;
 }
-p{
-  color:#fff;
-  font-size:16px;
-  margin-bottom:20px;
+#type{
+  font-size: 16px;
+  min-height: 50px;
+  opacity: 0.9;
 }
 button{
-  padding:12px 26px;
-  font-size:16px;
+  padding:12px 28px;
   border:none;
   border-radius:30px;
+  font-size:16px;
   cursor:pointer;
-  transition:0.3s;
+  margin:10px;
 }
 #yes{
-  background:#ff3366;
-  color:#fff;
-}
-#yes:hover{
-  transform:scale(1.05);
+  background: linear-gradient(135deg,#ff4b7d,#ff85a2);
+  color:white;
 }
 #no{
-  background:#ffffffaa;
-  color:#333;
+  background: rgba(255,255,255,0.7);
+  color:#222;
   position:absolute;
+}
+.heart{
+  position:absolute;
+  color:#ff5fa2;
+  font-size:20px;
+  animation: float 6s linear infinite;
+}
+@keyframes float{
+  from{transform:translateY(100vh); opacity:1;}
+  to{transform:translateY(-10vh); opacity:0;}
 }
 </style>
 </head>
@@ -79,9 +80,9 @@ button{
 
 <div class="card">
   <img src="sachitha.jpg">
-  <h1>Sachitha ❤️</h1>
-  <p>Will you be my Valentine?</p>
-  <button id="yes" onclick="yesClick()">YES 💖</button>
+  <h1>Sachitha</h1>
+  <div id="type"></div>
+  <button id="yes" onclick="yesClick()">YES 💕</button>
   <button id="no">NO 🙈</button>
 </div>
 
@@ -90,25 +91,50 @@ button{
 </audio>
 
 <script>
-const noBtn = document.getElementById("no");
-noBtn.addEventListener("mouseover", moveNo);
-noBtn.addEventListener("touchstart", moveNo);
-
-function moveNo(){
-  const x = Math.random() * (window.innerWidth - 100);
-  const y = Math.random() * (window.innerHeight - 50);
-  noBtn.style.left = x + "px";
-  noBtn.style.top = y + "px";
+// TYPEWRITER TEXT
+const text = "Every moment feels softer when it’s you 🌙";
+let i = 0;
+function typeText(){
+  if(i < text.length){
+    document.getElementById("type").innerHTML += text.charAt(i);
+    i++;
+    setTimeout(typeText, 60);
+  }
 }
+typeText();
 
+// NO BUTTON DODGE
+const noBtn = document.getElementById("no");
+document.addEventListener("mousemove", e=>{
+  const rect = noBtn.getBoundingClientRect();
+  if(Math.abs(e.clientX - rect.left) < 80 && Math.abs(e.clientY - rect.top) < 60){
+    noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
+    noBtn.style.top = Math.random() * (window.innerHeight - 50) + "px";
+  }
+});
+noBtn.addEventListener("touchstart", ()=>{
+  noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
+  noBtn.style.top = Math.random() * (window.innerHeight - 50) + "px";
+});
+
+// YES CLICK
 function yesClick(){
   document.getElementById("song").play();
   document.body.innerHTML =
-  "<h1 style='color:white;font-family:Playfair Display;font-size:42px;text-align:center;animation:fadeUp 1s;'>Yay 💕<br>You made my day 🌸</h1>";
+  "<h1 style='font-family:Dancing Script;font-size:50px;color:#ff85a2;text-align:center;'>You chose love 💖<br>And I chose you ✨</h1>";
 }
+
+// FLOATING HEARTS
+setInterval(()=>{
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerHTML = "❤";
+  heart.style.left = Math.random()*100 + "vw";
+  heart.style.fontSize = Math.random()*20 + 15 + "px";
+  document.body.appendChild(heart);
+  setTimeout(()=>heart.remove(),6000);
+},400);
 </script>
 
 </body>
 </html>
-
-
