--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ button{
 
 <script>
 // TYPEWRITER TEXT
-const text = "Every moment feels softer when it’s you 🌙";
+const text = "Every moment feels softer when it’s you . will you be my valentine🌙";
 let i = 0;
 function typeText(){
   if(i < text.length){
